...

                        <TextView
                            android:id="@+id/trackTitleID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/trackCreatorID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/deleteButton"
                        android:layout_width="@dimen/large_text"
                        android:layout_height="@dimen/large_text"
...

                        <TextView
                            android:id="@+id/trackLengthID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/commentsID"
                        android:layout_width="@dimen/large_text"
                        android:layout_height="@dimen/large_text"
...

                    <ToggleButton
                        android:id="@+id/buttonLikeID"
                        android:layout_width="@dimen/large_text"
                        android:layout_height="@dimen/large_text"
...

                    <ToggleButton
                        android:id="@+id/buttonFavoriteID"
                        android:layout_width="@dimen/large_text"
                        android:layout_height="@dimen/large_text"
...

                    <TextView
                        android:id="@+id/trackLikesID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/trackFavouritesID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/feedbackButton"
                        android:layout_width="@dimen/large_text"
                        android:layout_height="@dimen/large_text"
...

                    <Button
                        android:id="@+id/reportID"
                        android:layout_width="@dimen/large_text"
                        android:layout_height="@dimen/large_text"
...

                <TextView
                    android:id="@+id/maps_test_text2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
...

    <ImageButton
        android:id="@+id/fb_share_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
...

    <ImageButton
        android:id="@+id/twitter_share_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
...
