<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id" translatable="false">2002032346519478</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2002032346519478</string>
    <string name="app_name">RunPHARAA</string>
    <string name="settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Near me</string>
    <string name="title_activity_login">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="loading_data">Loading user data …</string>
    <string name="welcome">Welcome %s !</string>
    <string name="almost_there">Almost there !</string>
    <string name="signOut">Sign Out</string>
    <string name="loggedOut">Logged out.</string>
    <string name="no_tracks">Oops! There are no tracks nearby</string>
    <string name="no_follow">Try following someone!</string>
    <string name="no_favorite">Try adding a track to your favorite!</string>
    <string name="no_favorites_and_likes">Like some tracks and add them to your favorites for better guess!</string>
    <string name="no_created_self">Try creating a track!</string>
    <string name="no_created_other">This user did not create a track yet!</string>
    <string name="add_photo">Photo</string>
    <string name="set_properties">Prop.</string>
    <string name="create_track">Create!</string>
    <string name="create_message">New track was successfully created !</string>
    <string name="properties_not_set">The properties must be set up</string>
    <string name="types_not_set">The types must be set up</string>
    <string name="need_name">A track needs a name!</string>
    <string name="time_needed">Time needed to complete the track</string>
    <string name="need_time">"A track needs a duration!"</string>
    <string name="properties_of_the_track">Properties of the Track</string>
    <string name="difficulty_is">"Difficulty is "</string>
    <string name="types" translatable="false">Types</string>
    <string name="choose_types">Choose the types of the track</string>
    <string name="default_time">Default run time was chosen</string>
    <string name="dismiss">Dismiss</string>
    <string name="noFilter">Do not filter</string>
    <string name="OK">OK</string>
    <string name="by">by %s</string>
    <string name="duration">Duration: %.2f minutes</string>
    <string name="distance">Distance: %.2f meters</string>
    <string name="difficulty">Difficulty: %.2f / 5.00</string>
    <string name="max_difficulty_of">At most a difficulty of </string>
    <string name="max_time_of">At most </string>
    <string name="no_time_limit">No time limitations</string>
    <string name="no_track_found">No track is called %s!</string>
    <string name="and">and</string>
    <string name="comment_hint">Write an awesome comment in less than %d characters!</string>
    <string name="comment_too_long">"Your comment is too long!"</string>
    <string name="no_user_found">No user is called %s!</string>
    <string name="search_users">Currently search for: users</string>
    <string name="search_tracks">Currently search for: tracks</string>
    <string name="prop_miss">Missing properties, try again!</string>
    <string name="feedback_exists">You\'ve already given a feedback</string>


    <string-array name="track_types">
        <item>City</item>
        <item>Forest</item>
        <item>Mountain</item>
        <item>Seaside</item>
        <item>Beach</item>
        <item>Countryside</item>
    </string-array>

    <string name="broadcast_location_update" translatable="false">location_update</string>

    <!-- Strings related to Settings -->

    <!-- Near me -->
    <string name="pref_section_near_me">Near me</string>

        <string name="pref_title_radius">Preferred radius</string>
        <string name="pref_key_radius" translatable="false">pref_radius</string>
        <string name="pref_default_radius" translatable="false">2.0</string>

    <!-- Location -->
    <string name="pref_section_location">Location updates</string>

        <string name="pref_title_min_time_interval">Minimum refresh interval</string>
        <string name="pref_key_min_time_interval" translatable="false">min_time_interval</string>
        <string name="pref_default_min_time_interval" translatable="false">1</string>

        <string name="pref_title_time_interval">Refresh interval</string>
        <string name="pref_key_time_interval" translatable="false">time_interval</string>
        <string name="pref_default_time_interval" translatable="false">5</string>

        <string name="pref_title_min_distance_interval">Minimum displacement</string>
        <string name="pref_key_min_distance_interval" translatable="false">min_distance_interval</string>
        <string name="pref_default_min_distance_interval" translatable="false">5</string>

    <!-- Tracks -->
    <string name="pref_section_track">Track</string>

        <string name="pref_title_track_types">Track types</string>
        <string name="pref_key_track_types" translatable="false">track_types</string>
        <array name="pref_default_track_types" />

    <!-- Other -->
    <string name="pref_section_other">Other</string>

        <string name="pref_title_reset_prefs">Reset preferences</string>
        <string name="pref_key_reset_prefs" translatable="false">reset_prefs</string>

        <string name="pref_title_clear_cache">Clear cache</string>
        <string name="pref_key_clear_cache" translatable="false">clear_cache</string>

    <string name="social_media_post_message">Check out this awesome track on RunPharaa !\nIt\'s called \"%s\"\n #runPharaaWayFromTravis</string>

    <!-- Trophies in user -->
    <string name="creation_trophies">Creation</string>
    <string name="like_trophies">Liked</string>
    <string name="fav_trophies">Favorite</string>

    <!-- Trophies like dialog -->
    <string name="one_like">One Like</string>
    <string name="two_likes">Two likes</string>
    <string name="ten_likes">Ten likes</string>
    <string name="add_some_likes">Add some likes</string>

    <!-- Trophies favorite dialog -->
    <string name="add_some_favorites">Add some favorites</string>
    <string name="ten_favorites">Ten favorites</string>
    <string name="two_favorites">Two favorites</string>
    <string name="one_favorite">One favorite</string>

    <!-- Trophies creation dialog -->
    <string name="one_track">One track</string>
    <string name="two_tracks">Two tracks</string>
    <string name="ten_tracks">Ten tracks</string>
    <string name="create_tracks">Create tracks</string>

    <string name="delete">Delete</string>
    <string name="delete_track">Delete ?</string>
    <string name="track_deleted">Deleted</string>
    <string name="want_to_delete_this_track">Do you want to delete this track ?</string>
    <string name="cancel">Cancel</string>
    <string name="deleted_track">Sorry this track has been deleted</string>
    <string name="want_to_delete_your_account">Do you want to delete your account ?</string>
    <string name="logout">Log out</string>
    <string name="explanation_popup">Welcome to RunPharaa!\nHere are some tips and tricks to use the app:\n\n- You can create a track by pressing the + button!\n\n- On the map, you can change your location by long pressing anywhere in it!\n\n- You can go back to your actual location by clicking on the orange pin and chose "Get me to my location"!\n\n- Press anywhere on this popup window to close it!\n
    </string>
    <string name="report">To send a report to one of our developers, please write to:\n\nrun.PHARAA.sweng@gmail.com\n\nThank you for making runPHARAA a better app!</string>
    <string name="help">Help</string>
    <string name="popup_description">help_popup</string>
    <string name="report_description">report_popup</string>
    <string name="get_me_to_my_location">Get me to my location</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="name">Name</string>
    <string name="comments">Comments</string>
    <string name="comment_too_short">Comment cannot be empty</string>
</resources>
