...
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="4dp" />

            <TextView
                android:id="@+id/comment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/comment_image"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
...
